fix: consistency scrollbars ui (#2020)
* fix: consistency scrollbars ui

default-scrollbar css

lint

styling adjustments

* Update EditMode.svelte

--- a/ui/user/src/app.css
+++ b/ui/user/src/app.css
@@ -54,6 +54,14 @@ body {
 	@apply w-full rounded-lg bg-gray-100 p-2 outline-none focus:ring-2 focus:ring-blue dark:bg-gray-900;
 }
 
+.default-scrollbar-thin {
+	@apply overflow-auto scrollbar-thin scrollbar-track-surface2 scrollbar-thumb-surface3;
+}
+
+.default-scrollbar {
+	@apply scrollbar scrollbar-track-surface1 scrollbar-thumb-surface3;
+}
+
 dialog::backdrop {
 	@apply bg-black bg-opacity-60;
 }
